<resources>
    <string name="app_name">TravelWriter</string>
    <string name="firstTimeFragmentWelcomeText">Welcome to TravelWriter!\nPlease enter your name:</string>
    <string name="firstTimeFragmentEditText">Name</string>
    <string name="firstTimeFragmentButtonText">Proceed</string>
    <string name="aboutFragmentTitle">TravelWriter</string>
    <string name="aboutFragmentText">A simple Android app where you can\nwrite text posts and post them on\na publicly available resource (or save\nthem as drafts before posting them\nlater), as well as access and read\nalready created posts by other users</string>
    <string name="addArticleFragmentPostButtonText">Create Post</string>
    <string name="addArticleFragmentSaveButtonText">Save as draft</string>
    <string name="addArticleFragmentBodyText">Body</string>
    <string name="addArticleFragmentTitleText">Title</string>
    <string name="mainFragmentAddArticleButtonDescription">Go to Article</string>
    <string name="mainFragmentDrawerLabel">TravelWriter</string>
    <string name="mainFragmentDrawerDraftsFragmentText">Drafts</string>
    <string name="mainFragmentDrawerDetailsFragmentText">Details</string>
    <string name="mainFragmentDrawerAboutFragmentText">About</string>
    <string name="mainFragmentDrawerLogoutText">Logout</string>
    <string name="articleTitleTextViewText">Article Title</string>
    <string name="deleteListItemButtonDescription">Delete Button</string>
    <string name="deleteAlertDialogBoxTitle">Delete Draft</string>
    <string name="deleteAlertDialogBoxMessage">Are you sure you want to delete this draft?</string>
    <string name="createPostDialogBoxTitle">Create Post</string>
    <string name="createPostDialogBoxMessage">Are you sure you want to post this article?</string>
    <string name="deletePostDialogBoxTitle">Delete Post</string>
    <string name="deletePostDialogBoxMessage">Are you sure you want to delete this posted article?</string>
    <string name="emptyDraftListText">No drafts created yet</string>
    <string name="emptyMainFragmentText">No Articles posted yet</string>
    <string name="aboutFragmentDetailsText">Discord:-Just_A_Ghost-#3907</string>
</resources>