<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="addArticleFragmentViewModel"
            type="com.example.travelwriter.addArticleFragment.AddArticleFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addArticleFragment.AddArticleFragment">

        <EditText
            android:id="@+id/addArticleFragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addArticleFragmentTitleText"
            android:inputType="text"
            android:text="@{addArticleFragmentViewModel.currentDraft.title}"
            android:minHeight="48dp"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addArticleFragmentBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/addArticleFragmentBodyText"
            android:inputType="textMultiLine"
            android:text="@{addArticleFragmentViewModel.currentDraft.body}"
            android:minHeight="200sp"
            android:maxHeight="400sp"
            android:autofillHints=""
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addArticleFragmentTitle" />

        <Button
            android:id="@+id/addArticleFragmentPostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/green_500"
            android:text="@string/addArticleFragmentPostButtonText"
            android:textColor="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addArticleFragmentBody" />

        <Button
            android:id="@+id/addArticleFragmentSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/grey"
            android:text="@string/addArticleFragmentSaveButtonText"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addArticleFragmentPostButton"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>