<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstTimeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".FirstTimeFragment">

        <TextView
            android:id="@+id/firstTimeFragmentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstTimeFragmentWelcomeText"
            android:textSize="25sp"
            android:layout_marginBottom="50sp"
            app:layout_constraintBottom_toTopOf="@id/firstTimeFragmentName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstTimeFragmentName"
            android:layout_width="225sp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/firstTimeFragmentEditText"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@id/firstTimeFragmentButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstTimeFragmentText" />

        <Button
            android:id="@+id/firstTimeFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_500"
            android:text="@string/firstTimeFragmentButtonText"
            android:textColor="#616161"
            android:layout_marginTop="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstTimeFragmentName"  />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>